<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="es.source.code.activity.SCOSEntry">


        <EditText
            android:id="@+id/name"
            style="@style/ThemeEditText"
            android:hint="@string/hint_account_name"
            android:drawableLeft="@drawable/account_name"/>

        <EditText
            android:id="@+id/password"
            style="@style/ThemeEditText"
            android:inputType="textPassword"
            android:hint="@string/hint_account_password"
            android:drawableLeft="@drawable/account_password"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/TableButton"
            android:layout_margin="5dip"
            android:text="@string/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_register"
            style="@style/TableButton"
            android:layout_margin="5dip"
            android:text="@string/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btn_back"
            style="@style/TableButton"
            android:layout_margin="5dip"
            android:text="@string/text_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
